test/sema/unknown-variable.delta.output
unknown-variable.delta:5:15: error: unknown identifier 'unknown'
    var foo = unknown;
              ^
