test/sema/unknown-variable.delta
// RUN: %check_errors %not %delta -typecheck %s

void main() {
    // CHECK: [[@LINE+1]]:15: error: unknown identifier 'unknown'
    var foo = unknown;
}
